# open-swe

./: AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  pyproject.toml  resume.sh
.github/workflows/: ci.yml
agent/: dispatch.py  server.py
agent/dashboard/: agent_instructions.py  agent_overrides.py  agent_usage.py  autofix_state.py  enabled_repos.py  eval_jobs.py  notion_oauth.py  options.py  plan_api.py  plan_store.py  profiles.py  repo_snapshots.py  review_style_jobs.py  review_styles.py  team_credentials.py  team_settings.py  user_credentials.py  user_mappings.py  workflow_approval.py
agent/integrations/: langsmith.py  local.py
agent/middleware/: check_message_queue.py  ensure_no_empty_msg.py
agent/review/: findings.py
agent/tools/: open_pull_request.py  schedule_thread_wakeup.py  slack_start_new_thread.py  slack_thread_reply.py
agent/utils/: auth.py  github_feedback.py  github_proxy.py  model.py  sandbox_state.py  slack_feedback.py  think_tags.py  tracing.py
agent/webhooks/: common.py  github.py  slack.py
agent_runtime/: __init__.py  app.py  config.py  cron_scheduler.py  db.py  executor.py  models.py  registry.py  runs_repo.py  schema.sql  serializers.py  streams.py  threads_repo.py  ttl_sweep.py  webhooks.py
agent_runtime/routers/: commands.py  crons.py  runs.py  store.py  streaming.py  threads.py
docs/: GETTING_STARTED.md  INSTALLATION.md  MIGRATION.md
docs/fast-api-migration/: COMPLETENESS.md  flow-change.md  langsmith-decoupling.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md
evals/reviewer/: README.md
tests/agent/: test_agent_thread_pr_state.py  test_dispatch.py  test_import_hygiene.py  test_no_bare_get_client.py
tests/agent_graph/: conftest.py  fake_model.py  test_agent_graph.py  test_litellm_smoke.py  test_scheduler_graph.py  test_store_consistency.py
tests/agent_runtime/: conftest.py  fake_boundary_app.py  runtime.test.json  test_crons.py  test_executor_sweep.py  test_litellm_smoke.py  test_real_agent_graph.py  test_runs_api.py  test_store_api.py  test_streaming.py  test_threads_api.py  test_ttl_sweep.py  testgraphs.py
tests/chaos/: chaos.config.json  conftest.py  receiver.py  slow_graph.py  test_sigkill.py
tests/contract/: conftest.py  contract_graph.py  normalize.py  test_langgraph_api_contract.py  test_postgres_fixture.py
tests/contract/golden/: README.md  commands_run_start_response.json  run_cancel_raw_route.json  run_complete_webhook_payload.json  run_create.json  run_double_dispatch_statuses.json  run_stream_mode_checkpoints.json  run_stream_mode_events.json  run_stream_mode_messages-tuple.json  run_stream_mode_messages.json  run_stream_mode_tools.json  run_stream_mode_updates.json  run_stream_mode_values.json  store_get_item.json  stream_events_transcript.json  thread_create.json  thread_create_if_exists_do_nothing.json  thread_get_after_update.json  thread_history_wire.json  thread_search_select_subset.json  thread_state_wire.json
tests/dashboard/: test_autofix_state.py
tests/e2e/: README.md  agent_entrypoint.py  dev-mock.sh  harness.py  playwright.config.ts  run-embedded.sh
tests/e2e/tests/: plan_review.spec.ts
tests/github/: test_github_feedback.py  test_github_issue_webhook.py
tests/middleware/: test_ensure_no_empty_msg.py
tests/reviewer/: test_pr_ready_auto_review.py  test_reviewer_findings.py  test_reviewer_watch.py
tests/sandbox/: test_langsmith_sandbox_config.py  test_local_integration.py  test_sandbox_state.py
tests/slack/: test_slack_context.py  test_slack_feedback.py  test_slack_start_new_thread_tool.py  test_slack_webhook_errors.py
tests/support/: litellm.py  postgres.py
tests/tools/: test_schedule_thread_wakeup.py
ui/src/features/agents/lib/: streamMessagesToUi.ts  thinkTags.test.ts  thinkTags.ts
