[project]
name = "open-swe-agent"
version = "0.1.0"
description = "Open SWE Agent - Python agent for automating software engineering tasks"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "deepagents==0.7.0a7",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "httpx>=0.28.1",
    "PyJWT>=2.12.1",
    "cryptography>=49.0.0",
    "langgraph-sdk>=0.4.2",
    "langchain>=1.3.9",
    "langgraph>=1.1.10",
    "markdownify>=1.2.3",
    "langchain-anthropic>=1.4.6",
    "langgraph-cli[inmem]>=0.4.31",
    "langsmith==0.9.8",
    "langchain-openai>=1.3.4",
    "langchain-fireworks>=1.4.4",
    # langchain-fireworks 1.4.2 pins a pre-release fireworks-ai; opt in explicitly so uv resolves it.
    "fireworks-ai>=1.2.0a86",
    "langchain-daytona>=0.0.7",
    "langchain-modal>=0.0.5",
    "langchain-runloop>=0.0.6",
    "langchain-e2b==0.0.5",
    "exa-py>=2.16.0",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.3.0",
    "stagehand>=3.21.0",
    "langgraph-checkpoint-postgres>=3.1",
    "apscheduler>=3.10,<4",
    "psycopg[binary,pool]>=3.2",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "Pygments>=2.20.0",
    "psycopg[binary]>=3.2",
]

[tool.uv]
# The langchain-{e2b,daytona,modal,runloop} sandbox integrations still declare a
# conservative `deepagents<0.7.0` upper bound, but the 0.7.0 alpha keeps the
# public API they rely on (SandboxBackendProtocol / BaseSandbox) backward
# compatible. Override the transitive bound so we can track the latest alpha.
override-dependencies = ["deepagents==0.7.0a7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["agent", "agent_runtime"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "TID251", # banned-api: the bare-get_client license guard (phase-3.md T1)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"langgraph_sdk.get_client".msg = "Use thread_ops.langgraph_client() or dispatch.dispatch_client(); get_client(url=None) imports Elastic-licensed langgraph_api in-process (docs/MIGRATION.md §1)."
"langgraph_sdk.get_sync_client".msg = "Same hazard as get_client; use the URL-resolving helpers."

[tool.ruff.lint.per-file-ignores]
"agent/utils/thread_ops.py" = ["TID251"] # langgraph_client() — the sanctioned wrapper
"agent/dispatch.py" = ["TID251"]         # dispatch_client() — the sanctioned wrapper
"tests/**" = ["TID251"]                  # suites legitimately call get_client(url=...)
"evals/**" = ["TID251"]                  # dev-context tooling (licensed like tests)
"scripts/**" = ["TID251"]                # dev-context tooling

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default runs stay hermetic: no Docker, no server, no network LLM.
# `make contract-test` opts back in with `-m contract`; litellm tests are
# opt-in via `-m litellm` (docs/fast-api-migration/phase-0.md §1 name ledger).
addopts = "-m 'not contract and not litellm'"
markers = [
    "contract: requires Docker Postgres and/or a running langgraph server (make contract-test)",
    "litellm: calls the local LiteLLM proxy configured in .env (opt-in)",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["agent", "agent_runtime", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "ui", "**/.*"]
reportMissingTypeStubs = false
